[package]
name = "bevy_example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Remember to revert dynamic_linking before releasing your game
# https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.22.0", features = ["simd-stable", "debug-render-2d"] }

[profile.release]
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
